# presupuesto-cli

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
datos/: reglas_iniciales.json
doc/: guia-desarrollo-presupuesto-cli.md  requisitos-presupuesto-cli.md
src/presupuesto/: __init__.py  agrupador.py  categorizar.py  cli.py  cmd_actualizar.py  cmd_añadir.py  cmd_cerrar.py  cmd_estado.py  cmd_saldos.py  cmd_vista.py  config.py  duplicados.py  escritor.py  hipoteca.py  interactivo.py  maestro.py  reglas.py  tui_categorizar.py  tui_dividir.py  tui_revision.py
src/presupuesto/parsers/: __init__.py  abanca.py  base.py  bbva.py  ing.py  kutxabank.py  n26.py  openbank.py
tests/: test_agrupador.py  test_categorizar.py  test_duplicados.py  test_escritor.py  test_hipoteca.py  test_integracion.py  test_maestro.py  test_parsers_abanca.py  test_parsers_bbva.py  test_parsers_ing.py  test_parsers_kutxabank.py  test_parsers_n26.py  test_parsers_openbank.py  test_reglas.py
tests/fixtures/: bbva_ejemplo.xlsx  ing_ejemplo.xls  kutxabank_ejemplo.xls  openbank_ejemplo.xls
