[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presupuesto-cli"
version = "0.1.0"
description = "Importa extractos bancarios a presupuesto.xlsx"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "openpyxl>=3.1",
    "pdfplumber>=0.10",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "beautifulsoup4>=4.12",
]

[project.scripts]
presupuesto = "presupuesto.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
